--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.ts",
   "scripts": {
     "dev": "ts-node-dev index.ts",
-    "test": "jest"
+    "test": "jest",
+    "tsc:watch": "tsc --watch",
+    "run:dist": "nodemon dist/index.js"
   },
   "keywords": [],
   "author": "",
